--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:16.15
+      volumes:
+        - ${{github.workspace}}:/__w/taskbox/taskbox
     steps:
       - name: Log node version
         run: |
