fix: VRT workflow

--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -1,4 +1,4 @@
-name: Storybook Tests
+name: VRT
 on: push
 jobs:
   build:
@@ -11,8 +11,6 @@ jobs:
           node-version: '16.x'
       - name: Install dependencies
         run: npm ci
-      - name: Build & Run Storybook tests
-        run: npm run test-storybook:ci
       - name: Capture UI Images
         run: npm run snapshot:ci
       - name: Run VRT
