fix: storybook tests

--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -19,9 +19,7 @@ jobs:
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "npx http-server storybook-static --port 6006 --silent" \
-            "npx wait-on tcp:6006 && yarn test-storybook"
-      - name: Capture UI Images
-        run: npm run snapshot:ci
+            "npx wait-on tcp:6006 && yarn test-storybook && yarn snapshot:ci"
       - name: Run VRT
         id: vrt
         run: npm run vrt
