--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -36,8 +36,8 @@ jobs:
           retention-days: 5
       - name: Git config set
         run: |
-          git config user.email "you@example.com" \
-          git config user.name "Your Name"
+          git config --local user.email "you@example.com" \
+          git config --local user.name "Your Name"
       - name: deploy github pages
         run: npm run deploy
       - if: ${{ steps.vrt.outcome != 'success' }}
