--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -36,7 +36,7 @@ jobs:
           retention-days: 5
       - name: Git config set
         run: |
-          git config --global user.email "you@example.com" \
+          git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
       - name: deploy github pages
         run: npm run deploy
