--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -36,8 +36,8 @@ jobs:
           retention-days: 5
       - name: Git config set
         run: |
-          git config --global user.email "you@example.com"
-          git config --global user.name "Your Name"
+          git config --global user.email ${{ secrets.EMAIL }}
+          git config --global user.name ${{ secrets.NAME }}
       - name: deploy github pages
         run: npm run deploy
       - if: ${{ steps.vrt.outcome != 'success' }}
