--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Deploy storybook
         uses: peaceiris/actions-gh-pages@v3
         with:
-          personal_token: ${{ secret.GITHUB_TOKEN }}
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./storybook-static
       - if: ${{ steps.vrt.outcome != 'success' }}
         run: exit 1
